<resources>
    <string name="app_name">Meeting App</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="youremail_example_com">youremail@example.com</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_to_hold_video_conferences_and_meetings">Sign up to hold video conferences and meetings</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_out">Sign Out</string>
    <string name="invitation">Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
</resources>
